--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,5 +1,14 @@
 .header{
     background-color: #2c3d92;
+    height: 100%;
+}
+
+.image-logo{
+
+}
+
+.jib-logo{
+    width: 7.5%;
 }
 
 .header-content{
@@ -11,7 +20,7 @@
 }
 
 .search-header{
-    width: 40%;
+    width: 60%;
     display: flex;
 }
 
@@ -46,20 +55,67 @@
 }
 
 .header-cart{
-    width: 30px;
+    display: flex;
     color: white;
+    align-items: center;
+
+}
+
+.header-cart p{
+    font-size: 13px;
+    font-weight: 400;
+
+}
+
+.header-cart p:hover{
+    color: #f39d4c;
+
+}
+
+.header-account p{
+    font-size: 13px;
+    font-weight: 400;
 
 }
 
 .header-account{
     display: flex;
-    width: 30px;
     color: white;
+    align-items: center;
 
 }
 
 
+.header-account p:hover{
+    color: #f39d4c;
+
+}
+
+.user-icon{
+    width: 30px;
+    margin-right: 5px;
+
+}
+
+.cart-icon{
+    width: 30px;
+    margin-right: 5px;
+
+}
 
 .flag img{
+    position: relative;
     width: 30px;
+    right: 50%;
+}
+
+.select-categories{
+    width: 20%;
+    
+}
+
+.userandcart{
+    display: flex;
+    justify-content: space-around;
+    width: 13%;
 }
