--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -143,10 +143,6 @@
     
 }
 
-.navbar p:hover{
-    background-color: #dadada;
-
-}
 
 .select{
     outline: none;
@@ -165,3 +161,56 @@
 
 }
 
+.custom-select{
+    position: relative;
+    display: inline-block;
+    font-size: 14px;
+    cursor: pointer;
+
+}
+
+.drop-down{
+    width: 22px;
+    position: relative;
+    top: 7px;
+}
+.select-navbar:hover{
+    background-color: #dadada;
+
+}
+
+.custom-select .options-container{
+    display: block;
+}
+
+.custom-select:hover{
+
+}
+
+.options-container{
+    position: absolute;
+    display: inline-block;
+    box-shadow: 0px 3px 4px 0px rgba(0, 0, 0, 0.25) ;
+    width: max-content;
+
+}
+
+.option{
+    font-size: 14px;
+    background-color: white;
+}
+
+.option:hover{
+    color: #f39d4c;
+
+}
+
+.navbar .paragraph-nav{
+    position: relative;
+    top: 7px;
+}
+
+.navbar .paragraph-nav:hover{
+    background-color: #dadada;
+
+}
