--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,6 +1,6 @@
 .header{
     background-color: #2c3d92;
-    height: 100%;
+    /* height: 100%; */
 }
 
 .jib-logo{
@@ -127,15 +127,19 @@
     width: 13%;
 }
 
-.navbar{
+.header-navbar{
     background-color: #ffffff;
     display: flex;
+    /* justify-content: center; */
+    align-items: center;
     flex-direction: row;
-    margin: 3px;
+    margin: 5px;
+    margin-left: 5%;
+    /* margin-bottom: -1px; */
 }
 
-.navbar p{
-    padding: 1px 5px;
+.header-navbar p{
+    padding: 0px 5px;
     font-size: 14px;
     margin: 5px;
     text-align: center;
@@ -152,7 +156,7 @@
     background: none;
     font-size: 14px;
     margin: 5px;
-    padding: 1px 5px;
+    padding: 0px 5px;
 
 }
 
@@ -172,7 +176,6 @@
 .drop-down{
     width: 22px;
     position: relative;
-    top: 7px;
 }
 .select-navbar:hover{
     background-color: #dadada;
@@ -189,12 +192,13 @@
     display: inline-block;
     box-shadow: 0px 3px 4px 0px rgba(0, 0, 0, 0.25) ;
     width: max-content;
+    background-color: white;
+    z-index: 99;
 
 }
 
 .option{
     font-size: 14px;
-    background-color: white;
 }
 
 .option:hover{
@@ -202,13 +206,12 @@
 
 }
 
-.navbar .paragraph-nav{
+.header-navbar .paragraph-nav{
     position: relative;
-    top: 7px;
 
 }
 
-.navbar .paragraph-nav:hover{
+.header-navbar .paragraph-nav:hover{
     background-color: #dadada;
 
 }
