--- a/frontend/src/components/Complaints/Complaints.css
+++ b/frontend/src/components/Complaints/Complaints.css
@@ -21,16 +21,39 @@
     align-items: center;
     border: 0.5px solid #ddd;
     border-radius: 5px;
-    
 
 
 }
 
+
+
+.complain-question{
+    display: flex;
+    justify-content: flex-end;
+    margin: 10px;
+}
+
+.select-complain{
+    border: 0.5px solid #ddd;
+    border-radius: 5px;
+    padding: 5px;
+    margin-bottom: 5px;
+    width: 50vw;
+    
+
+}
+
+
 .complain-text{
-    padding: 5px 5px 0 5px;
     background: #f5f5f5;
     border-bottom: 0.5px solid #ddd;
     width: 100%;
+}
+
+.complain-text-p{
+    padding-top: 10px;
+    padding-left: 10px;
+
 }
 
 .complain-text p{
@@ -46,10 +69,22 @@
 
 }
 
+.complain-input span{
+    font-weight: 550;
+    font-size: 15px;
+}
+
 .complain-input input{
     border-radius: 4px;
     border: 1px solid #ddd;
     
+}
+
+.complain-input textarea{
+    border-radius: 4px;
+    border: 1px solid #ddd;
+    margin-left: 5px;    
+
 }
 
 .complain-details{
@@ -57,15 +92,63 @@
     justify-content: flex-end;
     width: 100%;
     padding: 10px;
+
+}
+
+.detail-of-complain{
+    display: flex;
+
+    
 }
 
 .complain-input-details{
-    width: 1000px;
+    width: 50vw;
     padding: 5px 8px;
 
 }
 
+.complain-input-all{
+    width: 20vw;
+    padding: 5px 8px;
+    margin-right: 30vw;
+}
 
+.complain-input-email{
+    width: 50vw;
+    padding: 5px 8px;
+}
+
+.submit-column{
+    display: flex;
+    /* justify-content: flex-end; */
+    margin-left: 33vh;
+
+}
+
+.submit-complain-details{
+    padding: 10px 5px;
+}
+
+.cancel-complain-details{
+    padding: 10px 5px;
+}
+
+.submit-complain-btn{
+    padding: 5px 7px;
+    border-radius: 5px;
+    border: none;
+    background-color: #337ab7;
+    color: white;
+}
+
+.cancel-complain-btn{
+    padding: 5px 7px;
+    border-radius: 5px;
+    border: none;
+    background-color: #d9534f;
+    color: white;
+
+}
 
 
 
@@ -86,7 +169,7 @@
 
 
 
-.footer-img{
+.complain-footer-img{
     display: flex;
     justify-content: center;
     background-color: white;
