--- a/frontend/src/components/Pcspec/Pcspec.css
+++ b/frontend/src/components/Pcspec/Pcspec.css
@@ -65,10 +65,12 @@
     padding-bottom: 0.5%;
     height: 5%;
     margin-left: 1.5%;
+    max-height: 65px;
 
 }
 
 .choose-spec-text h4{
+    margin-top: 4%;    
     font-size: larger;
 
 }
@@ -179,10 +181,20 @@
 }
 
 .choose-spec-unit:hover{
+  border: 1px solid #ff9900;
+  border-left: 5px solid #ff9900;
+  background-color: #F2F2F2;
+  cursor: pointer;
+}
+
+
+.choose-spec-unit:active,
+.choose-spec-unit:focus {
     border: 1px solid #ff9900;
     border-left: 5px solid #ff9900;
+  }
 
-}
+
 
 .choose-spec-text-p{
     padding: 5% 0 0 15%;
@@ -300,6 +312,7 @@
     display: flex;
     padding: 3px 8px;
     border-radius: 5px;
+    margin-left: 10px;
 
 }
 
